--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,3 +88,6 @@ body {
     box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
     filter: blur(10px);
 }
+a{
+    color: white !important;
+}
